# page

./: app.py  main.py  pyproject.toml  saferproxyfix.py
templates/: base.html  unfinished.html
templates/en/: about_us_page.html  base.html  gra_miasta.html  help.html  home.html  program_downloads.html
templates/pl/: 2s1b.html  about_us_page.html  atcat_os_home.html  base.html  gra_miasta.html  gra_win98.html  home.html  mój_yt_1.html  program_downloads.html
